--- a/src/client/src/assets/main.css
+++ b/src/client/src/assets/main.css
@@ -1,35 +1,16 @@
-@import './base.css';
+/* theme */
+@import 'primevue/resources/themes/lara-light-indigo/theme.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* core */
+@import 'primevue/resources/primevue.min.css';
 
-  font-weight: normal;
+@import 'primeflex/primeflex.min.css';
+
+html {
+    font-size: 16px;
+    height: 100%;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+body {
+    font-family: var(--font-family);
 }
