--- a/src/client/src/assets/main.css
+++ b/src/client/src/assets/main.css
@@ -13,4 +13,15 @@ html {
 
 body {
     font-family: var(--font-family);
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    padding: 0.5rem;
+}
+
+#app {
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    overflow-y: hidden;
 }
