--- a/src/client/src/assets/main.css
+++ b/src/client/src/assets/main.css
@@ -17,11 +17,14 @@ body {
     width: 100%;
     margin: 0px;
     padding: 0.5rem;
+    display: flex;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 #app {
-    height: 100%;
-    max-height: 100%;
-    width: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
